# clustering-rs

./: .gitignore  CLAUDE.md  Cargo.toml
documentation/: architecture.md  decision-log.md  delivery-plan.md  open-questions.md  requirements.md
src/: app.rs  clustering.rs  io.rs  labels.rs  lib.rs  main.rs  model.rs  progress.rs  schema.rs  session.rs  text.rs  worker.rs
