[package]
name = "incident-clustering-analyzer"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
calamine = "0.26"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
eframe = { version = "0.32.0", features = ["wgpu"] }
egui = "0.32.0"
egui_extras = "0.32.0"
rayon = "1.10"
rfd = "0.15"
rust_xlsxwriter = "0.94"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wgpu = "25.0.2"

[dev-dependencies]
tempfile = "3.14"
